api_sources = files(
  'core/src/vl53l0x_api.c',
  'core/src/vl53l0x_api_core.c',
  'core/src/vl53l0x_api_calibration.c',
  'core/src/vl53l0x_api_ranging.c',
  'core/src/vl53l0x_api_strings.c',
)

api_inc = include_directories(
  'core/inc'
)

api_headers = files(
  'core/inc/vl53l0x_api.h',
  'core/inc/vl53l0x_api_core.h',
  'core/inc/vl53l0x_api_calibration.h',
  'core/inc/vl53l0x_api_ranging.h',
  'core/inc/vl53l0x_api_strings.h',
  'core/inc/vl53l0x_def.h',
  'core/inc/vl53l0x_device.h',
  'core/inc/vl53l0x_interrupt_threshold_settings.h',
  'core/inc/vl53l0x_tuning.h',
)
