executable(
  'single_ranging',
  files(
    './vl53l0x_SingleRanging_Long_Range_Example.c',
  ),
  include_directories: includes,
  link_with: libtof,
)

executable(
  'continuous_ranging',
  files(
    './vl53l0x_ContinuousRanging_Example.c',
  ),
  include_directories: includes,
  link_with: libtof,
)

